# convertEncoding

./: .gitignore  LICENSE  NOTICE  README.md  index.md
.github/workflows/: cmake.yml  codeql-analysis.yml
Include/: Options.hpp  handleFiles.hpp  handleOptions.hpp  version.hpp.in
Source/: CMakeLists.txt  Options.cpp  handleFiles.cpp  handleOptions.cpp  main.cpp
TestFiles/: TableCalculation.ods  cp1252.txt  utf8bom.txt
